<resources>
    <string name="app_name">NumberLogicQuiz</string>
    <string name="submit">Submit Quiz</string>
    <string name="question_1">1) Find the ratio of LCM to HCF of 5, 15 and 20.</string>
    <string name="option_1_1">8 : 1</string>
    <string name="option_1_2">14 : 3</string>
    <string name="option_1_3">1 : 12</string>
    <string name="option_1_4">12 : 1</string>
    <string name="question_2">2) 2Y2X56 is divisible by 11 and 8. How many values can Y take?</string>
    <string name="option_2_1">5</string>
    <string name="option_2_2">3</string>
    <string name="option_2_3">4</string>
    <string name="option_2_4">2</string>
    <string name="question_3">3) 66 is divisible by which of the following numbers?</string>
    <string name="option_3_1">11</string>
    <string name="option_3_2">3</string>
    <string name="option_3_3">5</string>
    <string name="option_3_4">2</string>
    <string name="question_4">4) How many numbers between 55 and 555 including both the extreme values are divisible by 5?</string>
    <string name="question_5">5) N = 1421 x 1423 x 1425. What is the remainder when N is divided by 12?</string>
    <string name="option_5_1">0</string>
    <string name="option_5_2">1</string>
    <string name="option_5_3">3</string>
    <string name="option_5_4">9</string>
    <string name="question_6">6) Which of the following numbers are divisible by 2 and 3?</string>
    <string name="option_6_1">138</string>
    <string name="option_6_2">50</string>
    <string name="option_6_3">75</string>
    <string name="option_6_4">96</string>
    <string name="question_7">7) Find the number of factors of 8100</string>
    <string name="option_7_1">45</string>
    <string name="option_7_2">40</string>
    <string name="option_7_3">51</string>
    <string name="option_7_4">48</string>
    <string name="question_8">8) Find the remainder wher 7 raised to the power of 7 is divided by 4.</string>
    <string name="option_8_1">1</string>
    <string name="option_8_2">3</string>
    <string name="option_8_3">2</string>
    <string name="option_8_4">4</string>
    <string name="question_9">9) Find the last digit of 4 raised to the power of 96</string>
    <string name="option_9_1">4</string>
    <string name="option_9_2">6</string>
    <string name="option_9_3">2</string>
    <string name="option_9_4">5</string>
    <string name="question_10">10) The ratio of two numbers is 15 : 11 and their HCF is 13. What is the sum of the two numbers? </string>
    <string name="option_10_1">428</string>
    <string name="option_10_2">468</string>
    <string name="option_10_3">338</string>
    <string name="option_10_4">318</string>
    <string name="display1">Your score is </string>
    <string name="display2">/10</string>
</resources>
